2007-09-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/countries.py:
	* gaupol/languages.py:
	Fix module docstrings.

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.12

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py:
	Move the two lines of automatic post-progress-page page-switching from
	_prepare_confirmation_page to _correct_texts.

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_on_prepare):
	Possibly fix sometimes funky backwards navigation.

2007-09-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py (get_length_function):
	* gaupol/gtk/util.py (prepare_text_view):
	Fix a few more potential lambda NameErrors.

2007-09-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/text.py (_capitalize_position):
	Do not capitalize after ellipses.

2007-09-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.common-error.in:
	Fix a copy-paste error.

	* data/gaupol.gtk.conf.spec:
	* data/glade/text-assistant-capitalization-page.glade:
	* data/patterns/Latn.capitalization.conf:
	* data/patterns/Latn.capitalization.in:
	* data/patterns/Latn-en.capitalization.conf:
	* data/patterns/Latn-en.capitalization.in:
	* gaupol/agents/text.py (capitalize):
	* gaupol/gtk/assistants/text/assistant.py (_init_properties):
	* gaupol/gtk/assistants/text/capitalization.py:
	Add a capitalization task to the text correction assistant.

2007-09-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/subfile.py (_read_lines):
	Strip blank lines from beginning as well.

2007-09-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/subtitle.py (_init_filters):
	Replace "Plain text" file filter with an "All supported files" filter
	and set that active by default.

2007-09-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/split.py (_split_project):