@@ -1,3 +1,8 @@
+2007-10-01  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/agents/text.py (_capitalize_position):
+	Fix match index usage due to change of self._re_capitalizable.
+
 2007-09-30  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/countries.py:
